[package]
name = "plsql-mcp"
version = "0.6.2"
description = "Foundation MCP adapter for the PL/SQL Intelligence engine (Apache-2.0 OR MIT)"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["live-db"]
# Enables the live-DB tool surface (§13A.2). Runtime connections go through
# the published `oraclemcp-db` thin backend; the binary does not need Oracle
# Instant Client for the normal live-DB path. When disabled the binary still
# exposes the foundation static-analysis tools.
live-db = []
# Enables the live Oracle XE 23ai integration tests for the MCP live-DB
# tools (oracle-7nmg / PLSQL-MCP-LIVE-018). Runtime connections use the
# published pure-Rust `oraclemcp-db` backend; no Oracle Instant Client is
# required for this feature.
live-xe = []

[[bin]]
name = "plsql-mcp"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
asupersync = "=0.3.4"
clap = { version = "4", features = ["derive"] }
getrandom = "0.3"
# Depend on the published engine-free oraclemcp core (extracted to the standalone
# MuhDur/oraclemcp repo + crates.io). plsql-mcp is the full superset that adds the
# PL/SQL intelligence layer on top of this shared MCP spine.
oraclemcp-audit = "=0.4.0"
oraclemcp-auth = "=0.4.0"
oraclemcp-core = "=0.4.0"
oraclemcp-db = "=0.4.0"
oraclemcp-error = "=0.4.0"
oraclemcp-guard = "=0.4.0"
# plsql-mcp's live runtime and catalog adapter compile against the catalog
# OracleConnection trait; that trait is deliberately feature-gated inside
# plsql-catalog so stable/offline workspace gates can exclude this crate.
plsql-catalog = { path = "../plsql-catalog", version = "0.1.1", features = ["oraclemcp-db"] }
plsql-cicd = { path = "../plsql-cicd", version = "0.6.2" }
plsql-core = { path = "../plsql-core", version = "0.1.0" }
plsql-depgraph = { path = "../plsql-depgraph", version = "0.6.0" }
plsql-doc = { path = "../plsql-doc", version = "0.1.0" }
plsql-engine = { path = "../plsql-engine", version = "0.1.0" }
plsql-ir = { path = "../plsql-ir", version = "0.1.0" }
plsql-lineage = { path = "../plsql-lineage", version = "0.1.0" }
plsql-parser-antlr = { path = "../plsql-parser-antlr", version = "0.1.0" }
plsql-sast = { path = "../plsql-sast", version = "0.1.0" }
plsql-symbols = { path = "../plsql-symbols", version = "0.1.0" }
plsql-output = { path = "../plsql-output", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml = "1.1"
tracing.workspace = true

[dev-dependencies]
asupersync = { version = "=0.3.4", features = ["test-internals"] }
getrandom = "0.3"

[lints]
workspace = true
