[package]
name = "plsql-output"
version = "0.1.0"
description = "Shared output envelopes and schema registry for plsql-intelligence"
edition.workspace = true
license.workspace = true

[dependencies]
plsql-core = { path = "../plsql-core" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
