[package]
name = "plsql-parser-antlr"
version = "0.1.0"
description = "ANTLR4-based PL/SQL parser backend (grammar + codegen)"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# The .g4 grammar files are included as provenance for the committed generated
# Rust source under src/generated/.
include = [
    "grammars/",
    "tools/",
    "src/",
    "build.rs",
    "LICENSE-GRAMMARS.md",
]

[features]
default = []
# Enable the generated ANTLR backend.
# Pulls in the antlr-rust runtime so committed generated code can compile.
# Java regeneration is explicit only: PLSQL_ANTLR_REGEN=1.
# Without this feature, the crate exposes only the grammar files and docs.
antlr-codegen = ["antlr-rust"]

[dependencies]
plsql-core = { path = "../plsql-core", version = "0.1.0" }
plsql-parser = { path = "../plsql-parser", version = "0.1.0" }
# antlr-rust runtime — only used when antlr-codegen feature is enabled.
antlr-rust = { version = "0.3.0-beta", optional = true }

[dev-dependencies]
# Used by the antlr4rust_backend test suite (never-panic / proptest fuzzing).
proptest = "1"

[build-dependencies]

[lints]
workspace = true
