[package]
name = "plsql-parser"
version = "0.7.0"
description = "PL/SQL parser frontend: ParseBackend trait, token tape, CST, AST types"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
plsql-core = { path = "../plsql-core", version = "0.7.0" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
