[package]
name = "plsql-project"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Project model + file discovery for plsql-intelligence (PLSQL-WS-007)"

[dependencies]
plsql-core = { path = "../plsql-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "1.1"

[lints]
workspace = true
