[package]
name = "plsql-render"
version = "0.7.0"
description = "Low-level HTML, Markdown, and SVG render helpers for plsql-intelligence"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tracing.workspace = true

[lints]
workspace = true
