[package]
name = "plsql-sast"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Static-analysis security rule engine for plsql-intelligence (Layer 3, PLSQL-SAST-001)"

[dependencies]
plsql-core = { path = "../plsql-core" }
plsql-ir = { path = "../plsql-ir" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
